# splurt

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  demo.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy-rust.yml  rust-publish.yml  rust-stability.yml  rust.yml
.github/workflows/config/: matrix.yml
examples/: try.rs
futures-udp/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
futures-udp/src/: lib.rs
futures-udp/tests/: loopback.rs
src/: cli.rs  main.rs  ui.rs
ssdp-rs/: Cargo.toml  build.rs
ssdp-rs/src/: error.rs  lib.rs  listener.rs  message.rs  rootdevice.rs  search.rs  udp.rs
ssdp-rs/src/devicemap/: controlpoint.rs  mod.rs  rootdevice.rs  test_fixtures.rs  tests.rs
ssdp-rs/src/message/: devices.rs  error.rs  header.rs  mod.rs  msearch.rs  notify.rs  response.rs  services.rs  uri.rs
ssdp-rs/tests/: loopback.rs
xtask/: Cargo.toml
xtask/src/: commands.rs  lib.rs  main.rs
xtask/tests/: test_fmt.rs
xtask/tests/fixture/: Cargo.toml
xtask/tests/fixture/src/: lib.rs
