[package]
name = "splurt"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "A tiny ssdp/upnp repeater"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["ssdp", "upnp", "dlna", "docker"]
homepage = "https://github.com/MusicalNinjaDad/splurt"
repository = "https://github.com/MusicalNinjaDad/splurt"
categories = ["Command line utilities", "Network programming"]
license = "MIT"
rust-version = "1.94.1"
exclude = [".github", ".devcontainer"]
publish = false

[workspace]
members = ["ssdp-rs"]
default-members = [".", "ssdp-rs"]

[workspace.lints.clippy]
tests_outside_test_module = "deny"

[workspace.dependencies]
async-ready = "3.0.0"
autocfg = "1.5.0"
clap = { version = "4.6.0", features = ["derive"] }
clap_builder = "4.6.0"
clap_complete = "4.6.2"
clap_mangen = "0.3.0"
exit_safely = "0.2.1"
futures = "0.3.32"
futures-net = "0.6.0"
futures-udp = "0.1.0"
ninja-build_rs = "0.1.0"
try_v2 = "0.4.2"
url = "2.5.8"
uuid = { version = "1.23.1" }

ssdp_rs = { path = "ssdp-rs" }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
crossterm = { version = "0.29.0", features = ["event-stream"] }
exit_safely = { workspace = true }
futures = { workspace = true }
futures-util = { version = "0.3.32", default-features = false, features = [
    "async-await",
    "async-await-macro",
] }
ratatui = "0.30.0"
ssdp_rs = { workspace = true }
try_v2 = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
autocfg = { workspace = true }
clap = { workspace = true }
clap_builder = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
ninja-build_rs = { workspace = true }
