[package]
name = "futures-udp"
version = "0.0.1"
edition = "2024"
readme = "README.md"
description = "SSDP message parsing, service announcement & subscription"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["async", "udp", "net"]
homepage = "https://github.com/MusicalNinjaDad/splurt"
repository = "https://github.com/MusicalNinjaDad/splurt"
categories = ["Network programming"]
license = "MIT"
rust-version = "1.90.0"

[dependencies]
futures = "0.3.32"
futures-net = "0.6.0"
socket2 = { version = "0.6.3", features = ["all"] }

[build-dependencies]
autocfg = { workspace = true }
