[package]
name = "futures-udp"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Non-blocking async UDPSocket, Stream & Sink. Runtime agnostic: works with tokio & futures-rs. Minimal dependencies."
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["async", "udp", "net"]
homepage = "https://github.com/MusicalNinjaDad/splurt"
repository = "https://github.com/MusicalNinjaDad/splurt"
categories = ["Network programming"]
license = "MIT"
rust-version = "1.90.0"

[dependencies]
futures = "0.3.32"
futures-net = "0.6.0"
socket2 = { version = "0.6.3", features = ["all"] }

[build-dependencies]
autocfg = { workspace = true }
