[package]
name = "ssdp-rs"
version = "0.0.1"
edition = "2024"
readme = "README.md"
description = "SSDP message parsing, service announcement & subscription"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["ssdp", "upnp", "dlna"]
homepage = "https://github.com/MusicalNinjaDad/splurt"
repository = "https://github.com/MusicalNinjaDad/splurt"
categories = ["Command line utilities", "Network programming"]
license = "MIT"
rust-version = "1.90.0"

[dependencies]
async-datagram = "3.0.0"
async-ready = "3.0.0"
futures = "0.3.32"
futures-net = "0.6.0"
osinfo = "1.0.0"
socket2 = { version = "0.6.3", features = ["all"] }
uuid = "1.23.1"

[build-dependencies]
autocfg = { workspace = true }
