[package]
name = "ssdp_rs"
version = "0.0.1"
edition = "2024"
readme = "README.md"
description = "SSDP message parsing, service announcement & subscription"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["ssdp", "upnp", "dlna"]
homepage = "https://github.com/MusicalNinjaDad/splurt"
repository = "https://github.com/MusicalNinjaDad/splurt"
categories = ["Command line utilities", "Network programming"]
license = "MIT"
rust-version = "1.90.0"
publish = false

[dependencies]
chrono = "0.4.44"
derive_more = { version = "2.1.1", features = [
    "display",
    "from",
    "from_str",
    "into",
] }
futures = "0.3.32"
futures-timer = "3.0.3"
futures-udp = { workspace = true }
osinfo = "1.0.0"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }

[build-dependencies]
autocfg = { workspace = true }
ninja-build_rs = { workspace = true }
